Fixed positioning of wind and map orientation controls so that they don't overlap with leaderboard handle and tab

--- a/java/com.sap.sailing.gwt.ui/RaceBoard.css
+++ b/java/com.sap.sailing.gwt.ui/RaceBoard.css
@@ -94,6 +94,14 @@ table {
 	padding-top: 10px;
 	padding-left: 10px;
 }
+.CombinedWindPanelParentDiv.indentsmall,
+.TrueNorthIndicatorPanelParentDiv.indentsmall {
+	padding-left: 30px;
+}
+.CombinedWindPanelParentDiv.indentbig,
+.TrueNorthIndicatorPanelParentDiv.indentbig {
+	padding-left: 45px;
+}
 
 .MapSimulationLegendParentDiv {
 	padding-bottom: 10px;
